--- a/scottertrip_final.ipynb
+++ b/scottertrip_final.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary for Scooter Trip Data\n",
+    "- Traveling for trip duration least then 10 mins or distance shorter then 3 km is the typically purpose for using a sccoter\n",
+    "- People tend to rent a scooter between 5pm to 0 am\n",
+    "- Charging and arranging the scooter should be done at 3am to 12pm, which is the lowest renting period that people rent a scooter\n",
+    "- May is the month having the lowest users\n",
+    "- September is the month having the highest users\n",
+    "- During summer time, people tend to have longer duration, have longer distance, but the speed is slower\n",
+    "- People tend to use scooter to travel street by street the most\n",
+    "- There is no big difference in the portion of Type_commute in months or in Summer\n",
+    "- Weekdend could be one of the factors that accounts to Type_commute pattern"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
