--- a/scottertrip_final.ipynb
+++ b/scottertrip_final.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Summary for Scooter Trip Data\n",
-    "- Traveling for trip duration least then 10 mins or distance shorter then 3 km is the typically purpose for using a sccoter\n",
-    "- People tend to rent a scooter between 5pm to 0 am\n",
-    "- Charging and arranging the scooter should be done at 3am to 12pm, which is the lowest renting period that people rent a scooter\n",
+    "- Traveling for trip duration least then 10 mins or distance shorter then 3 km is the typical purpose for using a sccoter\n",
+    "- People tend to rent a scooter between 5 pm to 0 am\n",
+    "- Charging and arranging the scooter should be done at 3 am to 12 pm, which is the lowest renting period that people rent a scooter\n",
     "- May is the month having the lowest users\n",
     "- September is the month having the highest users\n",
     "- During summer time, people tend to have longer duration, have longer distance, but the speed is slower\n",
@@ -1633,8 +1633,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### People tend to rent a scooter between 5pm to 0 am\n",
-    "### the low peak of renttime is 4am to 11am"
+    "### People tend to rent a scooter between 5 pm to 0 am\n",
+    "### the low peak of renttime is 4 am to 11 am"
    ]
   },
   {
@@ -1730,7 +1730,7 @@
     "## Weekday\n",
     "- Thursday and Saturday are the days having most users\n",
     "- Weekend plays an immportant role here for distance, duraiton and speed\n",
-    "- From 3am to 12pm is the time window that has is the low peak of renting "
+    "- From 3 am to 12 pm is the time window that has is the low peak of renting "
    ]
   },
   {
@@ -1824,7 +1824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3am to 12pm is the lowest renting period that people rent a scooter.\n",
+    "### 3 am to 12 pm is the lowest renting period that people rent a scooter.\n",
     "### Charging and arrangine the scooter should be done at this period."
    ]
   },
@@ -2475,7 +2475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### From 8am to 2pm ss hit its renting peak"
+    "### From 8 am to 2 pm ss hit its renting peak"
    ]
   },
   {
